--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,3 +72,11 @@ en:
   signupnow: "Sign up now!"
   form_error_messages: "The form contains %{plural}."
   error_text: "error"
+  invalid_login: "Invalid email/password combination"
+  remember_me: "Remember me"
+  login: "Log in"
+  signup: "Sign up now!"
+  new_user: "New user?"
+  account: "Account"
+  login: "Log in"
+  logout: "Log out"
